Prevent horizontal scrolling on the body element.

--- a/web/applications/data-discovery/includes/css/scrollbars.css
+++ b/web/applications/data-discovery/includes/css/scrollbars.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 body.noselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
